minor: upgrade to JDK 25